--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   backend:
     container_name: ttb-survey-backend
     build:
-      context: . # โปรเจคปัจจุบันคือ backend
+      context: . 
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
